added new section

--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
             <h2>Our Services</h2>
             <p>Details about our services.</p>
         </section>
+        <section>
+                <h2>Here is another section</h2>
+                <p>Details about this section.</p>
     </main>
 
     <footer>
