changed banner color

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <p>This is a section about us.</p>
         </section>
         <section>
-            <h2>Our Services</h2>
+            <h2>Our Services.</h2>
             <p>Details about our services.</p>
         </section>
         <section>
